2003-10-27  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/gda-config.[c.h] (gda_config_get_provider_model):
	New function.

2003-10-26  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/gda-data-model.c (gda_data_model_to_xml):
	Implemented the standalone=FALSE case.

2003-10-19  Laurent Sansonetti <laurent@datarescue.be>

	* doc/C/examples/full_example.c:
	Fixed compilation issues (was broken).

2003-10-18  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/*.c:
	* doc/C/tmpl/*.sgml:
	Added some missing entries in the API reference, and fixed existing 
	ones.

2003-10-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/Makefile.am: added gda-marshal.c to built_files.

2003-10-16  Paisa Seeluangsawat <paisa@users.sf.net>

	* providers/mysql/gda-mysql-provider.c: 
	  - add #include <libgda/gda-util.h> 
	  - minor cosmatic fixes to stop some compiler warnings.
	* providers/mysql/gda-mysql-recordset.c:
	  - fixed possible memory leak by moving gda_row_new() a few line down.
	  - commented out variable "lengths", which doesn't seem to be used
	    anywhere.
	  - handle FIELD_TYPE_BLOB length correctly
	  - distinguish SQL NULL from 0, 0.0, "".
	  - factored the code for mysql data -> GdaValue conversion into
	    fill_gda_value()

2003-10-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.h: added FEATURE_UPDATABLE_CURSOR to
	GdaConnectionFeature enumeration.

2003-10-14  Murray Cumming  <murrayc@usa.net>
 
 	* libgda/gda-config.[h|c]: Register GdaProviderInfo and 
 	GdaDataSourceInfo boxed gtypes, with copy and free functions. Useful
 	for language bindings.

2003-10-12  Paisa Seeluangsawat <paisa@users.sf.net>

	* libgda/gda-field.h:
	* libgda/gda-field.c: added default_value field into
	GdaFieldAttributes.  Add/modify related functions.

2003-10-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/Makefile.am: fixed enum code generation.

2003-10-11  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/tmpl/gda-blob.sgml: added missing file.
